# sample_template_package

./: AUTHORS.rst  README.rst  junit-test.xml  pyproject.toml
.github/workflows/: docs.yml  format.yml  install.yml  lint.yml  package.yml  pages.yml  tests.yml
docs/: conf.py  index.rst
docs/autogen/: modules.rst  sample_template_package.rst  sample_template_package.sample_template_package.rst
tests/: test_sample_template_package.py
