[tool.poetry]
name = "sample_template_package"
version = "0.1.0"
description = "Prints out Hello World!"
authors = ["Jan Bronicki <janbronicki@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.format.dependencies]
black = "^22.8.0"
isort = "^5.10.1"


[tool.poetry.group.dev.dependencies]
tox = "^3.26.0"


[tool.poetry.group.type_check.dependencies]
mypy = "^0.971"
types-all = "^1.0.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.1.3"
pytest-mock = "^3.8.2"
pytest-cov = "^3.0.0"
toml = "^0.10.2"


[tool.poetry.group.docs.dependencies]
Sphinx = "^5.1.1"
sphinx-autorun = "^1.1.1"
sphinx-rtd-theme = "^1.0.0"


[tool.poetry.group.lint.dependencies]
pylint = "^2.15.2"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
